plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'africa.jopen'
version '1.0'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.0'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

/*jar {
  manifest {
    attributes 'Main-Class': 'africa.jopen.gstreamerdemo.App'
  }
  from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }

}*/

application {
  mainModule = 'africa.jopen.gstreamerdemo'
  mainClass = 'africa.jopen.gstreamerdemo.App'
}

javafx {
  version = '21'
  modules = ['javafx.controls', 'javafx.fxml', 'javafx.media','javafx.base','javafx.graphics']
}
var classifier = ''
// check if we are on windows
if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {classifier = 'windows-x86_64'
} else if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {classifier = 'linux-x86_64'
} else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {classifier = 'macosx-x86_64'
}

dependencies {
  implementation('org.controlsfx:controlsfx:11.1.2')
  implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
  implementation 'org.json:json:20231013'
//  implementation 'com.squareup.okhttp3:okhttp:4.9.3'
  implementation 'com.squareup.okhttp3:okhttp:4.12.0'

  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22'






  implementation "dev.onvoid.webrtc:webrtc-java:0.8.0"
  implementation group: "dev.onvoid.webrtc", name: "webrtc-java", version: "0.8.0", classifier: classifier

  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
useJUnitPlatform()}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug',
             '--compress', '2',
             '--no-header-files',
             '--no-man-pages',
             '--add-modules', 'kotlin.stdlib',
  ]
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}